Final working Jenkins pipeline with tests

--- a/dashboard.html
+++ b/dashboard.html
@@ -1,2 +1,10 @@
-<h1>Dashboard</h1>
-<p>Student Details</p>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Dashboard</title>
+</head>
+<body>
+    <h1>Dashboard</h1>
+    <p>Welcome, Student!</p>
+</body>
+</html>
