--- a/index.html
+++ b/index.html
@@ -1,2 +1,10 @@
-<h1>Welcome to Student System</h1>
-<a href="login.html">Login</a>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Home</title>
+</head>
+<body>
+    <h1>Welcome to Student Management System</h1>
+    <a href="login.html">Login</a>
+</body>
+</html>
