--- a/login.html
+++ b/login.html
@@ -1,5 +1,14 @@
-<h1>Login Page</h1>
-<form>
-  <input type="text" placeholder="Username">
-  <input type="password" placeholder="Password">
-</form>
+<!DOCTYPE html>
+<html>
+<head>
+    <title>Login</title>
+</head>
+<body>
+    <h1>Login Page</h1>
+    <form>
+        <input type="text" placeholder="Username"><br><br>
+        <input type="password" placeholder="Password"><br><br>
+        <button type="submit">Login</button>
+    </form>
+</body>
+</html>
