--- a/dashboard.html
+++ b/dashboard.html
@@ -1,10 +1,151 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Dashboard</title>
+    <meta charset="UTF-8">
+    <title>Dashboard | EduTrack</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        /* General Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f4f7f9;
+            display: flex;
+            min-height: 100vh;
+        }
+
+        /* Sidebar */
+        .sidebar {
+            width: 240px;
+            background-color: #1e272e;
+            color: #fff;
+            display: flex;
+            flex-direction: column;
+            padding: 20px;
+            position: fixed;
+            height: 100%;
+            transition: width 0.3s;
+        }
+
+        .sidebar h2 {
+            text-align: center;
+            margin-bottom: 30px;
+            font-size: 1.8em;
+            color: #00a8ff;
+        }
+
+        .sidebar a {
+            text-decoration: none;
+            color: #fff;
+            padding: 12px 15px;
+            margin-bottom: 10px;
+            border-radius: 6px;
+            transition: 0.3s;
+            font-weight: 500;
+        }
+
+        .sidebar a:hover {
+            background-color: #00a8ff;
+            color: #fff;
+        }
+
+        /* Main Content */
+        .content {
+            margin-left: 240px;
+            padding: 30px;
+            width: 100%;
+            transition: margin-left 0.3s;
+        }
+
+        .content h1 {
+            margin-bottom: 20px;
+            color: #1e272e;
+        }
+
+        /* Cards */
+        .card {
+            background-color: #fff;
+            padding: 25px;
+            margin-bottom: 20px;
+            border-radius: 12px;
+            box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+            transition: transform 0.2s, box-shadow 0.2s;
+        }
+
+        .card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 10px 20px rgba(0,0,0,0.15);
+        }
+
+        .card h3 {
+            margin-bottom: 15px;
+            color: #2f3640;
+        }
+
+        .card p {
+            color: #636e72;
+            font-size: 1em;
+        }
+
+        /* Responsive */
+        @media screen and (max-width: 768px) {
+            .sidebar {
+                width: 60px;
+                padding: 20px 10px;
+            }
+
+            .sidebar h2 {
+                display: none;
+            }
+
+            .sidebar a {
+                text-align: center;
+                padding: 12px 5px;
+            }
+
+            .content {
+                margin-left: 60px;
+                padding: 20px;
+            }
+        }
+    </style>
 </head>
 <body>
-    <h1>Dashboard</h1>
-    <p>Welcome, Student!</p>
+
+<div class="sidebar">
+    <h2>EduTrack</h2>
+    <a href="#">Dashboard</a>
+    <a href="#">Students</a>
+    <a href="#">Attendance</a>
+    <a href="#">Results</a>
+    <a href="index.html">Logout</a>
+</div>
+
+<div class="content">
+    <h1>Welcome, Ankita!</h1>
+
+    <div class="card">
+        <h3>Student Information</h3>
+        <p><strong>Name:</strong> Ankita Malkar</p>
+        <p><strong>Course:</strong> Computer Engineering</p>
+        <p><strong>Year:</strong> 2nd Year</p>
+    </div>
+
+    <div class="card">
+        <h3>Attendance Status</h3>
+        <p><strong>Current Attendance:</strong> 85%</p>
+    </div>
+
+    <div class="card">
+        <h3>Academic Performance</h3>
+        <p><strong>Last Semester CGPA:</strong> 8.4</p>
+    </div>
+</div>
+
 </body>
 </html>
