--- a/index.html
+++ b/index.html
@@ -1,10 +1,135 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Home</title>
+    <meta charset="UTF-8">
+    <title>EduTrack | Student Management System</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <style>
+        body {
+            margin: 0;
+            font-family: "Segoe UI", sans-serif;
+            background: #f4f6f9;
+            color: #333;
+        }
+
+        header {
+            background: linear-gradient(135deg, #1f4037, #99f2c8);
+            color: white;
+            padding: 60px 20px;
+            text-align: center;
+        }
+
+        header h1 {
+            font-size: 48px;
+            margin-bottom: 10px;
+        }
+
+        header p {
+            font-size: 20px;
+            opacity: 0.9;
+        }
+
+        .btn {
+            display: inline-block;
+            margin-top: 25px;
+            padding: 14px 30px;
+            background: #2c3e50;
+            color: white;
+            text-decoration: none;
+            border-radius: 6px;
+            font-size: 16px;
+        }
+
+        .features {
+            padding: 60px 20px;
+            text-align: center;
+        }
+
+        .features h2 {
+            font-size: 36px;
+            margin-bottom: 40px;
+        }
+
+        .card-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+        }
+
+        .card {
+            background: white;
+            width: 260px;
+            margin: 15px;
+            padding: 25px;
+            border-radius: 10px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.1);
+            transition: transform 0.3s;
+        }
+
+        .card:hover {
+            transform: translateY(-8px);
+        }
+
+        .card h3 {
+            margin-bottom: 10px;
+            color: #2980b9;
+        }
+
+        .card p {
+            font-size: 15px;
+            line-height: 1.5;
+        }
+
+        footer {
+            background: #2c3e50;
+            color: white;
+            text-align: center;
+            padding: 15px;
+            margin-top: 40px;
+        }
+    </style>
 </head>
+
 <body>
-    <h1>Welcome to Student Management System</h1>
-    <a href="login.html">Login</a>
+
+<header>
+    <h1>EduTrack</h1>
+    <p>All-in-One Student Management System</p>
+    <a href="login.html" class="btn">Login to System</a>
+</header>
+
+<section class="features">
+    <h2>System Features</h2>
+
+    <div class="card-container">
+
+        <div class="card">
+            <h3>Student Records</h3>
+            <p>Manage complete student profiles including personal details, courses, and academic history.</p>
+        </div>
+
+        <div class="card">
+            <h3>Attendance Tracking</h3>
+            <p>Daily attendance management with accurate tracking and instant reports.</p>
+        </div>
+
+        <div class="card">
+            <h3>Marks & Results</h3>
+            <p>Store exam results, grades, and performance analytics in one place.</p>
+        </div>
+
+        <div class="card">
+            <h3>Secure Login</h3>
+            <p>Role-based authentication for Admin, Teacher, and Student access.</p>
+        </div>
+
+    </div>
+</section>
+
+<footer>
+    <p>© 2026 EduTrack | Student Management System</p>
+</footer>
+
 </body>
 </html>
