--- a/login.html
+++ b/login.html
@@ -1,14 +1,139 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-    <title>Login</title>
+    <meta charset="UTF-8">
+    <title>Login | EduTrack</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <style>
+        * {
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Roboto', sans-serif;
+            margin: 0;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: linear-gradient(135deg, #6dd5fa, #2980b9);
+            overflow: hidden;
+        }
+
+        /* Animated floating circles */
+        body::before {
+            content: "";
+            position: absolute;
+            width: 200%;
+            height: 200%;
+            background: radial-gradient(circle at 10% 20%, rgba(255,255,255,0.1), transparent 50%),
+                        radial-gradient(circle at 80% 70%, rgba(255,255,255,0.1), transparent 50%);
+            animation: float 10s linear infinite;
+            z-index: 0;
+        }
+
+        @keyframes float {
+            0% { transform: translate(0, 0); }
+            50% { transform: translate(-50px, 50px); }
+            100% { transform: translate(0, 0); }
+        }
+
+        .login-box {
+            position: relative;
+            z-index: 1;
+            background: #fff;
+            padding: 40px 30px;
+            width: 350px;
+            border-radius: 12px;
+            box-shadow: 0 10px 25px rgba(0,0,0,0.2);
+            text-align: center;
+        }
+
+        .login-box h2 {
+            margin-bottom: 30px;
+            font-weight: 700;
+            color: #2980b9;
+        }
+
+        .login-box .input-group {
+            position: relative;
+            margin-bottom: 20px;
+        }
+
+        .login-box input {
+            width: 100%;
+            padding: 12px 15px 12px 40px;
+            border: 1px solid #ccc;
+            border-radius: 8px;
+            outline: none;
+            transition: 0.3s;
+        }
+
+        .login-box input:focus {
+            border-color: #2980b9;
+            box-shadow: 0 0 5px rgba(41,128,185,0.3);
+        }
+
+        /* Optional icons (placeholders) */
+        .login-box .input-group::before {
+            content: attr(data-icon);
+            position: absolute;
+            left: 12px;
+            top: 50%;
+            transform: translateY(-50%);
+            font-family: Arial, sans-serif;
+            font-weight: bold;
+            color: #2980b9;
+        }
+
+        button {
+            width: 100%;
+            padding: 12px;
+            background: linear-gradient(135deg, #2980b9, #6dd5fa);
+            border: none;
+            color: white;
+            font-size: 1em;
+            font-weight: 500;
+            border-radius: 8px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        button:hover {
+            background: linear-gradient(135deg, #1f6391, #4fb3e6);
+        }
+
+        .login-box p {
+            margin-top: 15px;
+            font-size: 0.9em;
+            color: #555;
+        }
+
+        .login-box p a {
+            color: #2980b9;
+            text-decoration: none;
+        }
+
+        .login-box p a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-    <h1>Login Page</h1>
-    <form>
-        <input type="text" placeholder="Username"><br><br>
-        <input type="password" placeholder="Password"><br><br>
+
+<div class="login-box">
+    <h2>EduTrack Login</h2>
+    <form action="dashboard.html">
+        <div class="input-group" data-icon="👤">
+            <input type="text" placeholder="Username" required>
+        </div>
+        <div class="input-group" data-icon="🔒">
+            <input type="password" placeholder="Password" required>
+        </div>
         <button type="submit">Login</button>
     </form>
+    <p>Forgot your password? <a href="#">Reset here</a></p>
+</div>
+
 </body>
 </html>
